# process-dcm

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .talismanrc  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
process_dcm/: __init__.py  __main__.py  const.py  main.py  utils.py
tests/: DICOMDIR  conftest.py  dummy.dcm  map.csv  test_const.py  test_main.py  test_utils.py
tests/DICOM/: 0001  0002  0003
tests/cataract/: eye.dcm
tests/dummy_ex/: wrong_acqui_time.dcm
tests/example-dcms/: OT.dcm  fundus.dcm
tests/same-time/: 00000066  00000068
