[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "process-dcm"
version = "0.3.0"
description = "Python library and app to extract images from DCM in private-eye format"
authors = ["Alan Silva <3899850+alanwilter@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "process_dcm" }]
license = "MIT"
repository = "https://github.com/pontikos-lab/process-dcm"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python-headless = "^4.10.0.84"
typer = "^0.12.5"
pydicom = "^3.0.0"
natsort = "^8.4.0"
pillow = "^10.4.0"
python-gdcm = "^3.0.24.1"

[tool.poetry.scripts]
process-dcm = "process_dcm.main:cli"

[tool.poetry.group.dev.dependencies]
boto3-stubs = { extras = ["lambda", "s3"], version = "1.35.16" }
ipdb = "0.13.13"
ipython = "8.27.0"
jupyterlab = "4.2.5"
mypy = "1.11.2"
mypy-boto3-lambda = "1.35.3"
mypy-boto3-s3 = "1.35.16"
pandas-stubs = "2.2.2.240909"
pdbpp = "0.10.3"
pip = "24.2"
pre-commit = "3.8.0"
pytest-cov = "5.0.0"
pytest-env = "1.1.4"
pytest-xdist = "3.6.1"
ruff = "0.6.4"
typed-argument-parser = "1.10.1"
wheel = "0.44.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = "tests --cov=process_dcm/ --cov-report=term-missing:skip-covered --cov-report=xml --dist=loadgroup -n 8 --durations=5"

[tool.coverage.report]
omit = ["__main__.py"]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["UP", "RUF", "I", "D", "E501"]
ignore = ["UP036"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "D104"]
"__main__.py" = ["D100"]
"__init__.py" = ["D104"]


[tool.mypy]
python_version = "3.11"
exclude = 'tests/'
strict = true
disable_error_code = ["type-arg"]

# NOTE: uncomment these lines and edit accordingly if you have modules still without typings
# [[tool.mypy.overrides]]
# module = ["sklearn.*",]
# ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "process_dcm/__init__.py",
    "pyproject.toml",
    "process_dcm/main.py",
]
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
